--- a/02-在webpack打包ts/package.json
+++ b/02-在webpack打包ts/package.json
@@ -18,5 +18,8 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.2"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0"
   }
 }
